# Booksy

./: README.md  app.py  pyproject.toml  template.py  utils.py
data/: BX-Book-Ratings-Subset.csv  BX-Users1.csv
